# DoAnimate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cleanup.sh  main.cc  render.hh  types.cc  types.hh
helpers/: CMakeLists.txt  ranges.cc  ranges.hh  variadic.hh
nodes/: CMakeLists.txt  node.cc  node.hh  node_system.cc  node_system.hh
shapes/: CMakeLists.txt  shapes.cc  shapes.hh  shapes.ipynb  shapes.md
